python3.13 (3.13.0~b3-3) UNRELEASED; urgency=medium

  * Remove distutils references, it was removed in 3.12.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 07 Jul 2024 18:17:26 +0200

python3.13 (3.13.0~b3-2) unstable; urgency=medium

  * Patch: Disable perf_trampoline or riscv64, for now.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 03 Jul 2024 17:05:54 +0200

python3.13 (3.13.0~b3-1) unstable; urgency=medium

  * New upstream beta.
  * Use https in watch file.
  * Refresh patches.
  * Migrate some more bits of packaging from 3.12 to 3.13.
  * Drop old breaks+replace.
  * Rename python3.12-updates.diff to compileall-minimal.diff.
  * Document that _typing is included in -minimal.
  * Update symbols file.
  * Install python3-wheel-whl in the testsuite autopkgtests. Not installed in
    venvs by default (so not a dependency of python3-venv) but required by
    tests.
  * Add a missing import to ntpath-import.diff.
  * Patch: Handle missing _pyrepl in the -minimal interpreter.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 03 Jul 2024 12:17:07 +0200

python3.13 (3.13.0~b2-1) unstable; urgency=medium

  [ Matthias Klose ]
  * Configure without --with-dtrace on the Hurd.

  [ Stefano Rivera ]
  * Python 3.13.0 beta 2 snapshot.
  * Refresh patches.
  * Bump watch file to 3.13.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 11 Jun 2024 15:14:35 +0100

python3.13 (3.13.0~b1-2) unstable; urgency=medium

  * Configure --with-system-libmpdec=no.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 12:13:44 +0200

python3.13 (3.13.0~b1-1) unstable; urgency=medium

  * Python 3.13.0 beta 1 snapshot.
  * Update symbols files.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 08:57:29 +0200

python3.13 (3.13.0~a6-1) experimental; urgency=medium

  * Python 3.13.0 alpha 6 snapshot.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 01 May 2024 07:51:20 +0200

python3.12 (3.12.3-1) unstable; urgency=medium
