@@ -1,42 +1,0 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
-.TH PYSETUP3.3 "1" "January 2012" "pysetup3.3 3.3" "User Commands"
-.SH NAME
-pysetup3.3 \- pysetup tool
-.SH SYNOPSIS
-.B pysetup
-[\fIoptions\fR] \fIaction \fR[\fIaction_options\fR]
-.SH DESCRIPTION
-.SS "Actions:"
-.IP
-run: Run one or several commands
-metadata: Display the metadata of a project
-install: Install a project
-remove: Remove a project
-search: Search for a project in the indexes
-list: List installed projects
-graph: Display a graph
-create: Create a project
-generate\-setup: Generate a backward\-compatible setup.py
-.PP
-To get more help on an action, use:
-.IP
-pysetup action \fB\-\-help\fR
-.SS "Global options:"
-.TP
-\fB\-\-verbose\fR (\fB\-v\fR)
-run verbosely (default)
-.TP
-\fB\-\-quiet\fR (\fB\-q\fR)
-run quietly (turns verbosity off)
-.TP
-\fB\-\-dry\-run\fR (\fB\-n\fR)
-don't actually do anything
-.TP
-\fB\-\-help\fR (\fB\-h\fR)
-show detailed help message
-.TP
-\fB\-\-no\-user\-cfg\fR
-ignore pydistutils.cfg in your home directory
-.TP
-\fB\-\-version\fR
-Display the version
