@@ -874,11 +874,6 @@ stamps/stamp-control:
 	  fi; \
 	done
 
-2to3-man:
-	help2man --no-info --version-string=$(VER) --no-discard-stderr \
-	  --name 'pysetup tool' \
-	  pysetup$(VER) > debian/pysetup3.1
-
 install: build-arch stamps/stamp-install
 stamps/stamp-install: stamps/stamp-build control-file stamps/stamp-control
 	dh_testdir
@@ -941,10 +936,9 @@ endif
 	: # Symlinks to /usr/bin for some tools
 	ln -sf ../lib/python$(VER)/pdb.py $(d)/usr/bin/pdb$(VER)
 	cp -p debian/pdb.1 $(d)/usr/share/man/man1/pdb$(VER).1
-	cp -p debian/pysetup3.1 $(d)/usr/share/man/man1/pysetup$(VER).1
 
 	: # versioned install only
-	rm -f $(d)/usr/bin/{idle3,pydoc3,pysetup3,python3,python3-config}
+	rm -f $(d)/usr/bin/{idle3,pydoc3,python3,python3-config}
 	rm -f $(d)/usr/lib/*/pkgconfig/python3.pc
 	rm -f $(d)/usr/lib/*/pkgconfig/python3-embed.pc
 
